Revert "fixed max-width to avoid overlaps #920"
This reverts commit 729be8416b761d110145f02a348fd6147fccc2ed.

--- a/stylus/framework/chat-content.styl
+++ b/stylus/framework/chat-content.styl
@@ -272,10 +272,7 @@ a.author
 			border-left: 2px solid silver-light
 			padding-left: 5px
 			line-height: 1px
-			max-height: 480px
-			overflow: hidden
-			img
-				max-width: 100%
+			max-height: 300px
 
 .text
 	display: inline-block
